--- a/index.html
+++ b/index.html
@@ -31,6 +31,10 @@
 
   <div class="gallery">Gallery</div>
 
+  <div class="test">
+    <div class="test__practice"></div>
+  </div>
+
   <footer class="footer">Footer</footer>
 
 </body>
