--- a/index.html
+++ b/index.html
@@ -29,6 +29,10 @@
 
   <section class="homes">Homes</section>
 
+  <div class="testing">
+    <div class="testing__practice"></div>
+  </div>
+
   <div class="gallery">Gallery</div>
 
   <footer class="footer">Footer</footer>
