--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <div class="testing__practice"></div>
   </div>
 
-  <div class="gallery">Gallery</div>
+  <div class="gallery">Gallersdy</div>
 
   <footer class="footer">Footer</footer>
 
