refactor: index.hmtl
removed testing div in index.htmltesting

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
   <section class="homes">Homes</section>
 
-  <div class="gallery">Gallersdy</div>
+  <div class="gallery">Gallery</div>
 
   <footer class="footer">Footer</footer>
 
