--- a/index.html
+++ b/index.html
@@ -21,15 +21,275 @@
 
   <div class="realtors">Top 3 realtors</div>
 
-  <section class="features">Features</section>
+  <section class="features">
+    <div class="feature">
+      <svg class="feature__icon">
+        <use xlink:href="img/sprite.svg#icon-global"></use>
+      </svg>
+      <h4 class="heading-4 heading-4--dark">World's best luxury homes</h4>
+      <p class="feature__text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Esse illo fugit nesciunt omnis.
+      </p>
+    </div>
+    <div class="feature">
+      <svg class="feature__icon">
+        <use xlink:href="img/sprite.svg#icon-trophy"></use>
+      </svg>
+      <h4 class="heading-4 heading-4--dark">Only the best properties</h4>
+      <p class="feature__text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officia nihil minima accusamus
+        ducimus doloribus!
+      </p>
+    </div>
+    <div class="feature">
+      <svg class="feature__icon">
+        <use xlink:href="img/sprite.svg#icon-map-pin"></use>
+      </svg>
+      <h4 class="heading-4 heading-4--dark">All homes in top locations</h4>
+      <p class="feature__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+    </div>
+    <div class="feature">
+      <svg class="feature__icon">
+        <use xlink:href="img/sprite.svg#icon-key"></use>
+      </svg>
+      <h4 class="heading-4 heading-4--dark">New home in one week</h4>
+      <p class="feature__text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Modi impedit quis saepe ullam
+        nemo.</p>
+    </div>
+    <div class="feature">
+      <svg class="feature__icon">
+        <use xlink:href="img/sprite.svg#icon-presentation"></use>
+      </svg>
+      <h4 class="heading-4 heading-4--dark">Top 1% realtors</h4>
+      <p class="feature__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad, nisi ab?</p>
+    </div>
+    <div class="feature">
+      <svg class="feature__icon">
+        <use xlink:href="img/sprite.svg#icon-lock"></use>
+      </svg>
+      <h4 class="heading-4 heading-4--dark">Secure payments on Nexter</h4>
+      <p class="feature__text">Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+    </div>
+  </section>
 
-  <div class="story__pictures">Story pictures</div>
+  <div class="story__pictures">
+    <img src="img/story-1.jpeg" alt="Couple with new house" class="story__img--1">
+    <img src="img/story-2.jpeg" alt="New House" class="story__img--2">
+  </div>
 
-  <div class="story__content">Story content</div>
+  <div class="story__content">
+    <h3 class="heading-3 mb-sm">Happy Customers
+      <h2 class="heading-2 heading-2--dark mb-md">&ldquo;The best decision of our lives&rdquo;</h2>
+      <p class="story__text mb-lg">Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem labore maiores quia
+        obcaecati quam est qui commodi?</p>
+      <button class="btn">Find your own home</button>
+    </h3>
+  </div>
 
-  <section class="homes">Homes</section>
+  <section class="homes">
 
-  <div class="gallery">Gallery</div>
+    <div class="home">
+      <img src="img/house-1.jpeg" alt="House 1" class="home__img">
+      <svg class="home__like">
+        <use xlink:href="img/sprite.svg#icon-heart-full"></use>
+      </svg>
+      <h5 class="home__name">Beaturiful family house</h5>
+      <div class="home__location">
+        <svg>
+          <use xlink:href="img/sprite.svg#icon-map-pin"></use>
+        </svg>
+        <p>USA</p>
+      </div>
+      <div class="home__rooms">
+        <svg>
+          <use xlink:href="img/sprite.svg#icon-profile-male"></use>
+        </svg>
+        <p>5 rooms</p>
+      </div>
+      <div class="home__area">
+        <svg>
+          <use xlink:href="img/sprite.svg#icon-expand"></use>
+        </svg>
+        <p>3,498 ft<sup>2</sup></p>
+      </div>
+      <div class="home__price">
+        <svg>
+          <use xlink:href="img/sprite.svg#icon-key"></use>
+        </svg>
+        <p>$1,200,000</p>
+      </div>
+      <button class="btn home__btn">Contact realtor</button>
+    </div>
+
+    <div class="home">
+      <img src="img/house-2.jpeg" alt="House 2" class="home__img">
+      <svg class="home__like">
+        <use xlink:href="img/sprite.svg#icon-heart-full"></use>
+      </svg>
+      <h5 class="home__name">Modern Glass Villa</h5>
+      <div class="home__location">
+        <svg>
+          <use xlink:href="img/sprite.svg#icon-map-pin"></use>
+        </svg>
+        <p>Canada</p>
+      </div>
+      <div class="home__rooms">
+        <svg>
+          <use xlink:href="img/sprite.svg#icon-profile-male"></use>
+        </svg>
+        <p>6 rooms</p>
+      </div>
+      <div class="home__area">
+        <svg>
+          <use xlink:href="img/sprite.svg#icon-expand"></use>
+        </svg>
+        <p>4,844 ft<sup>2</sup></p>
+      </div>
+      <div class="home__price">
+        <svg>
+          <use xlink:href="img/sprite.svg#icon-key"></use>
+        </svg>
+        <p>$2,750,000</p>
+      </div>
+      <button class="btn home__btn">Contact realtor</button>
+    </div>
+
+    <div class="home">
+      <img src="img/house-3.jpeg" alt="House 3" class="home__img">
+      <svg class="home__like">
+        <use xlink:href="img/sprite.svg#icon-heart-full"></use>
+      </svg>
+      <h5 class="home__name">Cozy Country Home</h5>
+      <div class="home__location">
+        <svg>
+          <use xlink:href="img/sprite.svg#icon-map-pin"></use>
+        </svg>
+        <p>UK</p>
+      </div>
+      <div class="home__rooms">
+        <svg>
+          <use xlink:href="img/sprite.svg#icon-profile-male"></use>
+        </svg>
+        <p>4 rooms</p>
+      </div>
+      <div class="home__area">
+        <svg>
+          <use xlink:href="img/sprite.svg#icon-expand"></use>
+        </svg>
+        <p>2,691 ft<sup>2</sup></p>
+      </div>
+      <div class="home__price">
+        <svg>
+          <use xlink:href="img/sprite.svg#icon-key"></use>
+        </svg>
+        <p>$850,000</p>
+      </div>
+      <button class="btn home__btn">Contact realtor</button>
+    </div>
+
+    <div class="home">
+      <img src="img/house-4.jpeg" alt="House 4" class="home__img">
+      <svg class="home__like">
+        <use xlink:href="img/sprite.svg#icon-heart-full"></use>
+      </svg>
+      <h5 class="home__name">Large Rustical Villa</h5>
+      <div class="home__location">
+        <svg>
+          <use xlink:href="img/sprite.svg#icon-map-pin"></use>
+        </svg>
+        <p>Portugal</p>
+      </div>
+      <div class="home__rooms">
+        <svg>
+          <use xlink:href="img/sprite.svg#icon-profile-male"></use>
+        </svg>
+        <p>6 rooms</p>
+      </div>
+      <div class="home__area">
+        <svg>
+          <use xlink:href="img/sprite.svg#icon-expand"></use>
+        </svg>
+        <p>5,167 ft<sup>2</sup></p>
+      </div>
+      <div class="home__price">
+        <svg>
+          <use xlink:href="img/sprite.svg#icon-key"></use>
+        </svg>
+        <p>$1,950,000</p>
+      </div>
+      <button class="btn home__btn">Contact realtor</button>
+    </div>
+
+    <div class="home">
+      <img src="img/house-5.jpeg" alt="House 5" class="home__img">
+      <svg class="home__like">
+        <use xlink:href="img/sprite.svg#icon-heart-full"></use>
+      </svg>
+      <h5 class="home__name">Majestic Palace House</h5>
+      <div class="home__location">
+        <svg>
+          <use xlink:href="img/sprite.svg#icon-map-pin"></use>
+        </svg>
+        <p>Germany</p>
+      </div>
+      <div class="home__rooms">
+        <svg>
+          <use xlink:href="img/sprite.svg#icon-profile-male"></use>
+        </svg>
+        <p>18 rooms</p>
+      </div>
+      <div class="home__area">
+        <svg>
+          <use xlink:href="img/sprite.svg#icon-expand"></use>
+        </svg>
+        <p>45,531 ft<sup>2</sup></p>
+      </div>
+      <div class="home__price">
+        <svg>
+          <use xlink:href="img/sprite.svg#icon-key"></use>
+        </svg>
+        <p>$9,500,000</p>
+      </div>
+      <button class="btn home__btn">Contact realtor</button>
+    </div>
+
+    <div class="home">
+      <img src="img/house-6.jpeg" alt="House 6" class="home__img">
+      <svg class="home__like">
+        <use xlink:href="img/sprite.svg#icon-heart-full"></use>
+      </svg>
+      <h5 class="home__name">Modern Family Apartment</h5>
+      <div class="home__location">
+        <svg>
+          <use xlink:href="img/sprite.svg#icon-map-pin"></use>
+        </svg>
+        <p>Italy</p>
+      </div>
+      <div class="home__rooms">
+        <svg>
+          <use xlink:href="img/sprite.svg#icon-profile-male"></use>
+        </svg>
+        <p>3 rooms</p>
+      </div>
+      <div class="home__area">
+        <svg>
+          <use xlink:href="img/sprite.svg#icon-expand"></use>
+        </svg>
+        <p>1,938 ft<sup>2</sup></p>
+      </div>
+      <div class="home__price">
+        <svg>
+          <use xlink:href="img/sprite.svg#icon-key"></use>
+        </svg>
+        <p>$600,000</p>
+      </div>
+      <button class="btn home__btn">Contact realtor</button>
+    </div>
+
+  </section>
+
+  <div class="gallery">
+    <img src="img/gal-1.jpeg" alt="Gallery image 1" class="gallery__img">
+    <img src="img/gal-2.jpeg" alt="Gallery image 2" class="gallery__img">
+  </div>
 
   <footer class="footer">Footer</footer>
 
